========================
   beancount: CHANGES
========================
Note: This file contains only changes in the 'default' branch.


2018-01-29

  - Added account_types.is_account_type() function, which should be used above
    account_types.get_account_type().


2018-01-23

  - Removed the insertion of 'balance' metadata from the importer. We use it for
    inserting Balance entries, not attach as metadata.

  - Disabled Balance insertion CSV test;
    03d9a5c3b2784a6f6a05c12eaeb7776f0478a96d broke the insertion of Balance
    entries without inserting 'balance' metadata. We'll probably have to revert the
    sorting changes and that. For now, fix the test.

  - Fixed #210: Changed the bean-price option --undeclared to accept a string
    value, the name of the Python source module to use for fetching undeclared
    commodities.

  - Added an error on using explicit merge cost syntax (this one: {..., *}).
    It's not supported yet, like AVERAGE cost booking (I probably should not
    have enabled the syntax until it was done. I was hopeful and moving fast at
    the time).


2018-01-16

  - CSV importer: Added an option not to add balance metadata to output.
  - CSV importer: Also, fixed a bug I introduced in the recent PR merge with
    rendering the name of the importer.
  - SQL importer: Made "location" field support transactions with metadata with
    missing filename and line no. Some plugins might be doing that.


2018-01-08

  - Fixed #209: Don't require 'ido. User will have to make sure that
    beancount-use-ido is false.


2018-01-07

  - Merged https://bitbucket.org/blais/beancount/pull-requests/28/allow-one-character-top-level-account,
    allowing one character top-level account names in the syntax. This doesn't
    mess with the flag token generateion because the account name is required to
    have at least two components.


2017-12-09

  - Fixed rendering of price directives to use the display context precision.


2017-11-24
